[project]
name = "harlequin-cassandra"
version = "0.1.3"
description = "A Harlequin adapter for Cassandra."
authors = [{ name = "Vadim Khitrin", email = "me@vkhitrin.com" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "harlequin>=1.25,<3",
    "cassandra-driver>=3.29.1,<4",
]

[project.urls]
Repository = "https://github.com/vkhitrin/harlequin-cassandra"

[project.entry-points."harlequin.adapter"]
cassandra = "harlequin_cassandra:HarlequinCassandraAdapter"

[dependency-groups]
dev = [
    "ruff>=0.1.6,<0.2",
    "pytest>=7.4.3,<8",
    "mypy>=1.7.0,<2",
    "pre-commit>=3.5.0,<4",
    "importlib_metadata>=4.6.0 ; python_version < '3.10.0'",
]

[tool.hatch.build.targets.sdist]
include = ["src/harlequin_cassandra"]

[tool.hatch.build.targets.wheel]
include = ["src/harlequin_cassandra"]

[tool.hatch.build.targets.wheel.sources]
"src/harlequin_cassandra" = "harlequin_cassandra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = ["A", "B", "E", "F", "I"]
target-version = "py38"

[tool.mypy]
python_version = "3.8"
files = ["src/**/*.py", "tests/**/*.py"]
mypy_path = "src:stubs"

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true
